vibhudadhichi-TicketReservation/src/objects/Suggestion__c.object
<CustomObject>
    <fields>
        <fullName>Implemented_Date__c</fullName>
        <label>Implemented Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Consideration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implemented</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggestion_Category__c</fullName>
        <label>Suggestion Category</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities/ IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kitchen Snacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggestion_Description__c</fullName>
        <inlineHelpText>Please enter as much detail - including pictures - around this suggestion so we clearly understand your idea.</inlineHelpText>
        <label>Suggestion Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Suggestion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Suggestion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suggestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>